--- a/DESO/Properties/Settings.settings
+++ b/DESO/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DESO.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="DefaultDataPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:/Darkyne/DesoLib</Value>
+    </Setting>
+    <Setting Name="CustomDataPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:/Darkyne/DesoLib</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
